--- a/public/500.html
+++ b/public/500.html
@@ -239,7 +239,8 @@ h2 {
 </div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<script src="js/main.js" type="text/javascript"></script>
+<!-- <script src="js/main.js" type="text/javascript"></script>
+ -->
 <script>
     $(function() {
         setTimeout(function(){
