--- a/public/500.html
+++ b/public/500.html
@@ -73,8 +73,8 @@
     <title>Unexpected Error</title>
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Condensed:100,200,300,400" rel="stylesheet">
     <link href="/500.css" rel="stylesheet" type="text/css" />
-  <link href="/assets/org/css/selecthealth.css" rel="stylesheet" type="text/css" media="screen, projection" />
-  <style>
+<!--   <link href="/assets/org/css/selecthealth.css" rel="stylesheet" type="text/css" media="screen, projection" />
+ -->  <style>
     /**/
 :root {
   --main-color: white;
